# three-rings

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.agents/skills/android-smoke/: SKILL.md
.agents/skills/e2e-suite/: SKILL.md
.agents/skills/ui-task-loop/: SKILL.md
.agents/skills/validate/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/e2e-suite/: SKILL.md
.claude/skills/ui-task-loop/: SKILL.md
.claude/skills/vendor-component/: SKILL.md
.codex/: config.toml
.devcontainer/: .env.example  .zshrc  Dockerfile  README.md  build.sh  devcontainer.json  setup-git-auth.sh
.github/workflows/: artifacts.yml  ci.yml  validate.yml
app/: Cargo.toml
app/src/: account.rs  auth.rs  auth_pages.rs  cards.rs  catalog.rs  db.rs  lib.rs  my.rs  seed.rs  shell.rs
app/src/auth/: cookies.rs  native.rs  upstream.rs
app/src/backend/: hosted.rs  mod.rs  native.rs  routes.rs
app/src/bench/: badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  command.rs  context_menu.rs  count_stepper.rs  dialog.rs  hover_card.rs  input.rs  input_group.rs  item.rs  kbd.rs  mod.rs  popover.rs  separator.rs  sheet.rs  skeleton.rs  sonner.rs  table.rs  theme_toggle.rs  toggle_group.rs
app/src/catalog/: destination.rs  rail.rs
app/src/components/ui/: badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  clx.rs  collapsible.rs  command.rs  context_menu.rs  count_stepper.rs  dialog.rs  hover_card.rs  input.rs  input_group.rs  item.rs  kbd.rs  label.rs  mod.rs  overlay_stack.rs  popover.rs  scroll_lock.rs  separator.rs  sheet.rs  skeleton.rs  sonner.rs  table.rs  theme_toggle.rs  toggle_group.rs
app/src/ingest/: extract.rs  filter.rs  mod.rs  poc_filter.json  scryfall.rs  upsert.rs
app/src/ingest/fixtures/: adventure.json  art_series.json  battle.json  digital.json  emblem.json  godzilla.json  meld.json  normal.json  reversible.json  split.json  token.json  transform.json  un_fractional.json
app/src/my/: tree.rs  tree_manage.rs
app/src/search/: mod.rs  parse.rs  sql.rs
design/: add-flow-prototype.md  command-palette.md  component-gap-analysis.md  information-architecture.md  wireframes.pen
docs/superpowers/plans/: 2026-07-10-add-flow-prototype-storyboards.md  2026-07-10-command-palette-wireframes.md  2026-07-10-component-gap-analysis.md
docs/superpowers/specs/: 2026-07-10-component-gap-analysis-design.md
end2end/: android-card-detail-check.mjs  android-cdp-check.mjs  android-quick-actions-check.mjs  android-rail-check.mjs  android-stepper-check.mjs  android-tree-check.mjs  android-tree-manage-check.mjs  auth-e2e.mjs  bench-check.mjs  cleanup-mutation-leftovers.mjs  hydration-check-authed.mjs  hydration-check.mjs  package.json  playwright.config.ts  probe-add-tmp.mjs  reset-ui-check.mjs  seed-e2e-user.mjs  seed-e2e-user.sh
end2end/tests/: auth.setup.ts  card-detail.spec.ts  catalog.spec.ts  collection-tree-manage.spec.ts  collection-tree.spec.ts  count-stepper.spec.ts  destination-picker.spec.ts  example.spec.ts  filter-rail.spec.ts  helpers.ts  smoke.spec.ts
frontend/: Cargo.toml
frontend/src/: lib.rs
migrations/: 0001_create_cards.sql  0002_catalog.sql  0003_collections.sql  0004_catalog_app_readonly.sql  0005_default_privileges_readonly.sql  0006_card_tagging.sql  0007_catalog_ingestion.sql  0008_search_indexes.sql
scripts/: gen-android-keystore.sh  ingest.sh  migrate.sh  seed-dev-data.sh  smoke-android.sh
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: catalog.rs  collection.rs  lib.rs  search.rs  tags.rs
specs/: 001-data-model.md  002-catalog-ingestion.md  003-auth.md  004-collection-api.md  005-data-access-backends.md  006-ui-components.md  007-architecture-spike.md  008-ui-design.md  README.md  TEMPLATE.md  TODO.md  agent-harness.md  app-ui.md  architecture-spike.md  auth.md  card-tagging.md  catalog-ingestion.md  catalog-search.md  collection-api.md  data-access-backends.md  data-model.md  delivery-pipeline.md  dev-environment.md  ui-component-bench.md  ui-components.md  ui-design.md  ui-work-loop.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: open_url.toml
src-tauri/src/: lib.rs
style/: input.css
