[workspace]
resolver = "2"
members = ["app", "frontend", "server", "src-tauri"]

[workspace.package]
license = "MIT"
authors = ["Dylan Goings <dylan.goings@atomicobject.com>"]


# Size-optimized profile for the wasm hydrate bundle (download size matters).
# cargo-leptos builds the frontend lib with this (lib-profile-release default).
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Fast profile for the native SSR `server` binary — it isn't size-constrained
# like the wasm bundle, so the compile-expensive LTO / single-codegen-unit /
# size-opt above only slow it down for no runtime benefit. Selected via
# cargo-leptos `bin-profile-release` below. See specs/delivery-pipeline.md →
# "Build performance (deploy time)".
[profile.server-release]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2

[workspace.dependencies]
leptos = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
leptos_axum = { version = "0.8.2" }

axum = "0.8.4"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "1.3.1"
log = "0.4.27"
# Auth: verify Better Auth (Neon Auth) EdDSA/Ed25519 JWTs locally against the
# branch JWKS (specs/auth.md). jsonwebtoken has no JWKS fetcher, so we pair it
# with reqwest (rustls, no OpenSSL) + base64 for the OKP `x` param.
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
uuid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
simple_logger = "5.0.0"
# Spike-only direct DB access from the server path (architecture-spike task 5);
# data-access-backends (Phase 2) puts a trait boundary in front of this.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
# Class merging for the vendored Rust/UI components (specs/ui-components.md).
tw_merge = "0.1"
wasm-bindgen = "=0.2.103"

# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "app"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# Build the SSR server binary with the fast native profile (no wasm-only LTO /
# codegen-units=1 / opt-z). The frontend wasm lib keeps [profile.release] via the
# default lib-profile-release. See specs/delivery-pipeline.md → Build performance.
bin-profile-release = "server-release"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"

tailwind-input-file = "style/input.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
