[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Goings <dylan.goings@atomicobject.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
spin-sdk = { version = "6.0.0", optional = true }
axum = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
web-sys = { version = "0.3.80", features = ["Storage", "Window"], optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "dep:web-sys"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:sqlx",
    "dep:tokio",
    "dep:tower-http",
]
spin = ["dep:spin-sdk"]