[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Goings <dylan.goings@atomicobject.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
spin-sdk = { version = "6.0.0", optional = true }
axum = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
base64 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
web-sys = { version = "0.3.80", features = ["Storage", "Window", "Location", "Element", "HtmlDivElement", "CssStyleDeclaration"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
serde.workspace = true
thiserror.workspace = true
tw_merge.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:sqlx",
    "dep:tokio",
    "dep:tower-http",
    "dep:jsonwebtoken",
    "dep:reqwest",
    "dep:serde_json",
    "dep:base64",
    "dep:uuid",
]
spin = ["dep:spin-sdk"]
# The /dev/components bench route (specs/ui-component-bench.md): on for dev
# workflows, off in release builds. frontend/server/src-tauri forward it here.
component-bench = []