[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Goings <dylan.goings@atomicobject.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Forward to the app crate's bench gate (specs/ui-component-bench.md); enabled
# via `cargo leptos watch --features component-bench` (applies to lib + bin).
component-bench = ["app/component-bench"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = [ "hydrate" ] }

console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen.workspace = true