[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Goings <dylan.goings@atomicobject.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Forward to the app crate's bench gate (specs/ui-component-bench.md); enabled
# via `cargo leptos watch --features component-bench` (applies to lib + bin).
component-bench = ["app/component-bench"]

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
dotenvy = "0.15"
