[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# The cross-backend contract crate (specs/data-access-backends.md): the DTOs and
# the one error enum that the hosted (sqlx) and native (HTTPS) backends both map
# into, so the two cannot drift. Deliberately dependency-light — it compiles on
# wasm (the hydrate frontend deserializes these DTOs) and on native alike, so it
# carries no sqlx/axum/tokio. The hosted side maps `ApiError::http_status()`
# (a plain u16) onto an axum status; nothing platform-specific lives here.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
