[package]
name = "three_rings"
version = "0.1.0"
authors = ["Dylan Goings <dylan.goings@atomicobject.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.4.0"
tauri-plugin-shell = "2.2.1"
tauri-plugin-process = "2.2.1"
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
axum = { workspace = true }
tokio = { workspace = true }
tauri-plugin-opener = "2"
